# TestMe

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-and-test.yml  cmake.yml  pre-commit.yml
cmake/: cpm.cmake  gtest.cmake  tree-sitter.cmake
src/: main.cpp  tree_sitter.h
src/input/: code_input.cpp  code_input.hpp  input.cpp  input.hpp  requirement_input.hpp
src/meta/: meta.hpp  method.hpp
src/testme_analyzer/: analyzer.cpp  analyzer.hpp  analyzer_config.hpp
src/testme_input/: code_input.cpp  code_input.hpp  code_input_unsupported_exception.hpp  input.cpp  input.hpp  requirement_input.cpp  requirement_input.hpp
src/testme_logger/: logger.cpp  logger.hpp
src/testme_meta/: class.hpp  variable.hpp
src/testme_tree_sitter/: testme_tree_sitter.h
src/tree_sitter/: tree_sitter.h
test/: input_test.cpp  main.cpp  test.cpp  test1.cpp  test2.cpp  testme_input_test.cpp  testme_logger_test.cpp
test/data/input/: code.txt  example.cs  example.java  requirement.txt
